--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div class="container">
+        <img src="../assets/images/team.png" id ='img-team'/>
         <h1>Game đố vui</h1>
         <div class="button-container">
             <button id = "btn-tritue" onclick="goToPage('cauhoitritue')">Câu đố trí tuệ</button>
@@ -40,8 +41,16 @@
         justify-content: center;
         align-items: center;
         border-radius: 10px;
+        position: relative;
     }
-
+    #img-team {
+        position:absolute;
+        width: 150px;
+        height:90px;
+        top: 0px;
+        left: -25px;
+        object-fit: contain;
+    }
     h1 {
         color: black;
         font-size: 4em;
