Add sound effect

--- a/award/result/index.html
+++ b/award/result/index.html
@@ -13,7 +13,7 @@
             <h1 class="title">Phần Thưởng</h1>
         </div>
         <div class="reward-box">
-            <p>With these changes, the text will properly fit inside the orange box without overflowing, and long strings or words will break or wrap as needed.</p>
+            <p id="random-line">_____________________________________</p>
         </div>
         <button class="next-button"></button>
     </div>
