--- a/penalty/index.html
+++ b/penalty/index.html
@@ -15,10 +15,11 @@
         <div class="penalty-box">
             <div class="boom"></div>
             <div class="message-panel" id="messagePanel">
-                <div class="message" id="penaltyMessage">After implementing these changes, run your HTML file again. You should see the explosion animation first, followed by the message and the button appearing together. The button will fade in smoothly, and clicking it will show the alert as defined in your JavaScript code.</div>
+                <div class="message" id="penaltyMessage">___________________________________</div>
             </div>
             <button id="nextButton" class="next-button"></button>
         </div>
+        <audio id="boomSound" src="/assets/sounds/boom.mp3" preload="auto"></audio>
     </div>
 
     <script src="script.js"></script>
