update UI and action

--- a/award/select/index.html
+++ b/award/select/index.html
@@ -9,8 +9,7 @@
 <body>
     <div class="container">
         <div class="header">        
-            <img src="/assets/images/team.png" alt="Group 1 Logo" class="logo">
-            <h1 class="title">Phần Thưởng</h1>
+            <img src="/assets/images/team.png" alt="Group 1 Logo" class="logo" id = "img_team">
         </div>
         <div class="reward-grid">
             <img src="/assets/images/hallowen-gift-1.png" alt="Gift 1" class="gift" onclick="animateGift(this)">
