--- a/penalty/index.html
+++ b/penalty/index.html
@@ -9,16 +9,17 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="/assets/images/team.png" alt="Group Logo" class="logo">
-            <h1 class="title">Hình phạt</h1>
+            <img src="/assets/images/team.png" alt="Group Logo" class="logo" id = "img_team">
+            <!-- <h1 class="title">Hình phạt</h1> -->
         </div>
         <div class="penalty-box">
             <div class="boom"></div>
             <div class="message-panel" id="messagePanel">
                 <div class="message" id="penaltyMessage">___________________________________</div>
             </div>
-            <button id="nextButton" class="next-button"></button>
         </div>
+        <button id="nextButton" class="next-button"></button>
+
         <audio id="boomSound" src="/assets/sounds/boom.mp3" preload="auto"></audio>
     </div>
 
