--- a/questionscreen.html
+++ b/questionscreen.html
@@ -21,9 +21,6 @@
             <button class="txtbtn" id = "btn-C" value="c">Tím</button>
             <button class="txtbtn" id = "btn-D" value="d">Vàng</button>
         </div>
-        <div id = '#contain-btn-next'>
-            <img src="../assets/images/btnnext.png" id = "btn-next" />
-        </div>
     </div>
     <audio id="timer-sound" src="../assets/sounds/time.mp3"></audio>
     <audio id="correct-sound" src="../assets/sounds/correct.mp3"></audio>
@@ -70,6 +67,8 @@
         top: 0px;
         left: -25px;
         object-fit: contain;
+        cursor: pointer;
+
     }
 
     h1 {
