--- a/rule/index.html
+++ b/rule/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="/assets/images/team.png" alt="Group Logo" class="logo">
-            <h1 class="title">Luật chơi</h1>
+            <img src="/assets/images/team.png" alt="Group Logo" id = "img-team">
+            <!-- <h1 class="title">Luật chơi</h1> -->
         </div>
         <div class="rule-box">
             <ul>
@@ -22,8 +22,6 @@
                 <li>Nếu người chơi trả lời sai, câu hỏi sẽ quay lại cho người chơi tiếp theo để trả lời.</li>
             </ul>
         </div>
-        <button class="close-button">Đóng</button>
-
     <script src="script.js"></script>
 </body>
 </html>
