--- a/award/result/index.html
+++ b/award/result/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="/assets/images/team.png" alt="Group Logo" class="logo">
-            <h1 class="title">Phần Thưởng</h1>
+            <img src="/assets/images/team.png" alt="Group Logo" class="logo" id = "img_team">
+            <!-- <h1 class="title">Phần Thưởng</h1> -->
         </div>
         <div class="reward-box">
             <p id="random-line">_____________________________________</p>
