Add background sound

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <button id = 'btn-luatchoi' onclick="goToPageGuide()">Luật chơi</button>
         </div>
     </div>
+    <audio id="backgroundSound" src="/assets/sounds/background.mp3" preload="auto" autoplay loop></audio>
 </body>
 <style>
     body {
