--- a/startscreen.html
+++ b/startscreen.html
@@ -13,6 +13,8 @@
             <button id = "btn-batdau" onclick="goToQuestionsScreen()">Bắt đầu</button>
         </div>
     </div>
+    <audio id="backgroundSound" src="/assets/sounds/background.mp3" preload="auto" autoplay loop></audio>
+
 </body>
 <style>
     body {
