--- a/rule/index.html
+++ b/rule/index.html
@@ -22,6 +22,8 @@
                 <li>Nếu người chơi trả lời sai, câu hỏi sẽ quay lại cho người chơi tiếp theo để trả lời.</li>
             </ul>
         </div>
+        <audio id="bg-sound" src="../assets/sounds/sound-bg.mp3"  preload="auto" autoplay loop></audio>
+
     <script src="script.js"></script>
 </body>
 </html>
