--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <button id = 'btn-domeo' onclick="goToPage('cauhoidomeo')">Câu đố mẹo</button>
             <button id = 'btn-luatchoi' onclick="goToPageGuide()">Luật chơi</button>
         </div>
+        <audio id="bg-sound" src="../assets/sounds/sound-bg.mp3" preload="auto" autoplay loop></audio>
+
     </div>
 </body>
 <style>
@@ -26,12 +28,15 @@
         padding: 0;
         font-family: Arial, sans-serif;
         background-color: #f0f0f0;
+        background-image: url('https://static.vecteezy.com/system/resources/previews/009/877/673/non_2x/pixel-art-sky-background-with-clouds-cloudy-blue-sky-for-8bit-game-on-white-background-vector.jpg'); /* Replace with your background image */
+        background-size: cover;
+        background-position: center;
     }
 
     .container {
         width: 90%;
-        max-width: 1000px;
-        height: 80%;
+        max-width: 1200px;
+        height: 90%;
         max-height: 600px;
         background-image: url('../assets/images/background-1.jpg'); /* Replace with your background image */
         background-size: cover;
@@ -94,5 +99,10 @@
        function goToPageGuide() {
         window.location.href = "rule/index.html";
     }
+    const bgSound = document.getElementById("bg-sound");
+    window.onload = function () {
+        bgSound.play()
+};
+
 </script>
 </html>
