--- a/rule/index.html
+++ b/rule/index.html
@@ -14,8 +14,13 @@
         </div>
         <div class="rule-box">
             <ul>
-                <!--placeholder content -->
-            </ul>
+                <li>Các người chơi xếp với nhau thành hàng hoặc có thể chọn thứ tự lần lượt 1, 2, 3, … tương ứng với các người chơi.</li>
+                <li>Người chơi thứ nhất có 15 giây để trả lời câu hỏi.</li>
+                <li>Hết 15 giây mà người chơi trả lời sai thì sẽ nhận hình phạt.</li>
+                <li>Ngược lại, nếu người chơi trả lời đúng thì sẽ có phần thưởng.</li>
+                <li>Khi câu hỏi đó được trả lời đúng, trò chơi sẽ chuyển qua câu hỏi khác cho người chơi tiếp theo.</li>
+                <li>Nếu người chơi trả lời sai, câu hỏi sẽ quay lại cho người chơi tiếp theo để trả lời.</li>
+                        </ul>
         </div>
         <audio id="bg-sound" src="../assets/sounds/sound-bg.mp3"  preload="auto" autoplay loop></audio>
 
