--- a/questionscreen.html
+++ b/questionscreen.html
@@ -130,6 +130,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 .txtbtn {
 font-weight: bold;
@@ -147,6 +148,7 @@ margin: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 .txtbtn {
 font-weight: bold;
