--- a/startscreen.html
+++ b/startscreen.html
@@ -125,6 +125,7 @@ function loadQuestionsTrivia() {
     }
     const bgSound = document.getElementById("bg-sound");
     window.onload = function () {
+        localStorage.setItem("canNext", "false");
         bgSound.play()
         loadQuestionsIntell();
         loadQuestionsTrivia();
