--- a/questionscreen.html
+++ b/questionscreen.html
@@ -64,7 +64,7 @@
         max-width: 1200px;
         height: 90%;
         max-height: 600px;
-        background-image: url('../assets/images/background-1.jpg'); /* Replace with your background image */
+        background-image: url('../assets/images/bg3.jpg'); /* Replace with your background image */
         background-size: cover;
         background-position: center;
         display: flex;
