--- a/startscreen.html
+++ b/startscreen.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Game</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="container">
@@ -26,7 +28,7 @@
         height: 100vh;
         margin: 0;
         padding: 0;
-        font-family: Arial, sans-serif;
+        font-family: 'Inter';
         background-color: #f0f0f0;
         background-image: url('https://static.vecteezy.com/system/resources/previews/009/877/673/non_2x/pixel-art-sky-background-with-clouds-cloudy-blue-sky-for-8bit-game-on-white-background-vector.jpg'); /* Replace with your background image */
         background-size: cover;
@@ -59,8 +61,7 @@
 
     h1 {
         color: black;
-        font-size: 4em;
-        text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+        font-size: 64px;
         margin-top: 50px;
     }
 
@@ -75,8 +76,9 @@
         background-color: #4CAF50;
         color: white;
         padding: 15px;
-        font-size: 40px;
+        font-size: 32px;
         font-weight: 600;
+        font-style: italic;
         border: none;
         margin: 10px 0;
         cursor: pointer;
