fix lỗi giao diện trả lời câu hỏi

--- a/questionscreen.html
+++ b/questionscreen.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Game</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="container">
@@ -45,7 +47,7 @@
         height: 100vh;
         margin: 0;
         padding: 0;
-        font-family: Arial, sans-serif;
+        font-family: 'Inter';
         background-color: #f0f0f0;
         background-image: url('https://static.vecteezy.com/system/resources/previews/009/877/673/non_2x/pixel-art-sky-background-with-clouds-cloudy-blue-sky-for-8bit-game-on-white-background-vector.jpg'); /* Replace with your background image */
         background-size: cover;
@@ -58,6 +60,10 @@
         margin-top: 60px;
         text-align:center;
         
+    }
+    #question-title {
+        font-family: 'Inter';
+        font-style: italic;
     }
     .container {
         width: 90%;
@@ -110,7 +116,9 @@
     cursor: pointer;
     background-color: #C9C9C9;
     border-width: 0;
-    border-radius: 10px;
+    border-radius: 15px;
+    font-family: 'Inter';
+    font-style: italic;
 }
 .timer-container {
     font-size: 40px;
