--- a/award/result/index.html
+++ b/award/result/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phần Thưởng</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="container">
         <div class="header">
             <img src="/assets/images/team.png" alt="Group Logo" class="logo" id = "img_team">
-            <!-- <h1 class="title">Phần Thưởng</h1> -->
         </div>
         <div class="reward-box">
             <p id="random-line">___________________________</p>
