--- a/startscreen.html
+++ b/startscreen.html
@@ -74,7 +74,7 @@
 
     button {
         background-color: #4CAF50;
-        color: white;
+        color: #ffffff;
         padding: 15px;
         font-size: 32px;
         font-weight: 600;
@@ -128,6 +128,7 @@ function loadQuestionsTrivia() {
     const bgSound = document.getElementById("bg-sound");
     window.onload = function () {
         localStorage.setItem("canNext", "false");
+        localStorage.setItem("timeLeft", 15);
         bgSound.play()
         loadQuestionsIntell();
         loadQuestionsTrivia();
