fix lỗi hết câu hỏi sẽ hiện thị alert thông báo và quay lại home

--- a/penalty/index.html
+++ b/penalty/index.html
@@ -18,8 +18,7 @@
                 <div class="message" id="penaltyMessage">___________________________________</div>
             </div>
         </div>
-        <button id="nextButton" class="next-button"></button>
-
+        <button id="nextButton" class="next-button next-button-hide"></button>
         <audio id="boomSound" src="/assets/sounds/boom.mp3" preload="auto"></audio>
     </div>
 
