fix lỗi giao diện luật chơi

--- a/rule/index.html
+++ b/rule/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luật chơi</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="container">
@@ -19,8 +21,7 @@
                 <li>Hết 15 giây mà người chơi trả lời sai thì sẽ nhận hình phạt.</li>
                 <li>Ngược lại, nếu người chơi trả lời đúng thì sẽ có phần thưởng.</li>
                 <li>Khi câu hỏi đó được trả lời đúng, trò chơi sẽ chuyển qua câu hỏi khác cho người chơi tiếp theo.</li>
-                <li>Nếu người chơi trả lời sai, câu hỏi sẽ quay lại cho người chơi tiếp theo để trả lời.</li>
-                        </ul>
+            </ul>
         </div>
         <audio id="bg-sound" src="../assets/sounds/sound-bg.mp3"  preload="auto" autoplay loop></audio>
 
